--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   workspace:
     container_name: workspace
     build:
-      context: workspace
+      context: docker/workspace
       dockerfile: Dockerfile
     ports:
       - 9000:9000
@@ -14,10 +14,12 @@ services:
   db:
     image: postgres:latest
     container_name: postgres
+    build:
+      context: docker
     ports:
       - 5432:5432
     volumes:
-      - ./postgres/init:/docker-entrypoint-initdb.d
+      - ./docker/postgres/init:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
