application.confのフォーマットを修正/cors回避

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,21 @@
-slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.default.db.url = "jdbc:postgresql://postgres:5432/postgres"
-slick.dbs.default.db.user = "postgres"
-slick.dbs.default.db.password = "postgres"
-
 secret.key.path="conf/play-scala-demo-firebase-adminsdk-w040m-e7a8bb4cd1.json"
-play.modules.enabled += "DI"
+
+play {
+    modules.enabled += "DI"
+    http.secret.key="changethissosomethingsecret"
+    filters.cors {
+      allowedHttpHeaders = ["Accept"]
+    }
+}
+
+slick.dbs.default {
+    profile="slick.jdbc.PostgresProfile$"
+    db {
+        url = ${DATABASE_URL}
+        user = "postgres"
+        password = "postgres"
+        driver = "org.postgresql.Driver"
+        numThreads = 18
+        maxConnections = 18
+    }
+}
