dbの設定変更

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,9 +11,7 @@ play {
 slick.dbs.default {
     profile="slick.jdbc.PostgresProfile$"
     db {
-        url = ${DATABASE_URL}
-        user = "postgres"
-        password = "postgres"
+        url = ${JDBC_DATABASE_URL}
         driver = "org.postgresql.Driver"
         numThreads = 18
         maxConnections = 18
