--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,20 @@
 secret.key.path="conf/play-scala-demo-firebase-adminsdk-w040m-e7a8bb4cd1.json"
 
 play {
-    modules.enabled += "DI"
-    http.secret.key="changethissosomethingsecret"
+    modules{
+        enabled += "DI"
+        enabled +=  "org.flywaydb.play.PlayModule"
+    }
+    http.secret.key=${?HTTP_SECRET_KEY}
     filters.cors {
       allowedHttpHeaders = ["Accept"]
     }
+}
+
+
+db.default {
+    url=${JDBC_DATABASE_URL}
+    driver = "org.postgresql.Driver"
 }
 
 slick.dbs.default {
